fix inset bottom margin on mobile
This change sets `margin-bottom: 2px` on the `.inset` class to avoid
crowding of the inset box on mobile devices.

--- a/src/css/content.css
+++ b/src/css/content.css
@@ -27,6 +27,7 @@ img {
 
 .inset {
     padding: 1em;
+    margin-bottom: 2em;
     background-color: hsl(270, 49%, 92%);
     box-shadow: 6px 6px 0 var(--brand-color);
 }
