--- a/src/css/media-queries.css
+++ b/src/css/media-queries.css
@@ -39,7 +39,6 @@
 
     .inset {
         width: 38%;
-        margin-bottom: 2em;
         margin-left: 2em;
         float: right;
     }
